# eaves

./: .gitignore  README.md  TODO.md  base.py  gen.py  pyproject.toml  setup.py
SampleContest/: conf.yaml  precautions.md
eaves/: __init__.py  base.py  gen.py
eaves/SampleContest/: conf.yaml  precautions.md
eaves/SampleProblem/: conf.yaml
