[project]
name = "eaves"
version = "0.0.1"
authors = [
  { name="sxyz-eaves", email="" },
]
description = "一个基于 python 的轻量级比赛创建辅助工具。"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sxyz-eaves/eaves"
"Bug Tracker" = "https://github.com/sxyz-eaves/eaves/issues"
